fixed header alignment

--- a/frontend/src/components/Table/style.css
+++ b/frontend/src/components/Table/style.css
@@ -76,6 +76,9 @@
 
 .Header h2 {
   font-size: large;
+  flex:1;
+  display: flex;
+  justify-content: center;
 }
 
 .SearchContainer {
